# nonogram

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
nonogram/: Cargo.toml
nonogram-bench/: Cargo.toml
nonogram-bench/benches/: main.rs  my_benchmark.rs  solve_vec.rs
nonogram-cli/: Cargo.toml
nonogram-cli/data/: schema1.json  schema2.json  schema3.json
nonogram-cli/src/: main.rs
nonogram/src/: lib.rs  schema.rs  solver.rs
nonogram/src/tests/: mod.rs  solver_tests.rs
