[package]
name = "nonogram-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nonogram = { path = "../nonogram" }
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"

[dependencies.simple_logger]
version = "4.1.0"
default-features = false
